syntax = "proto3";

package golem.auth.v1;

import "golem/common/empty.proto";
import "golem/auth/v1/auth_error.proto";
import "golem/auth/auth_ctx.proto";
import "golem/common/uuid.proto";

service CloudAuthService {
  rpc AuthenticateToken (AuthenticateTokenRequest) returns (AuthenticateTokenResponse);
}

message AuthenticateTokenRequest {
  golem.common.UUID secret = 1;
}

message AuthenticateTokenResponse {
  oneof result {
      AuthenticateTokenSuccessResponse success = 1;
      golem.auth.v1.AuthError error = 2;
  }
}

message AuthenticateTokenSuccessResponse {
    golem.auth.UserAuthCtx auth_ctx = 1;
}
